src/objects/KBIN_MyFax__c.object
<CustomObject>
    <description>KnowledgeBin fax, file. form, snippet or folder</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MyDocuments</relationshipLabel>
        <relationshipName>R00N30000001IsKHEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>MyFaxes</relationshipLabel>
        <relationshipName>MyFaxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MyFaxes</relationshipLabel>
        <relationshipName>R00N30000001IsTlEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <description>when this item was created</description>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>only one at a time</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>MyDocuments</relationshipLabel>
        <relationshipName>R00N30000001IsKGEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(URL__c,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <description>When this item was last modified</description>
        <label>Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>only one opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>MyDocuments</relationshipLabel>
        <relationshipName>R00N30000001IsKIEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pages__c</fullName>
        <label>Pages</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>type of material</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FaxScan</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Snippet</fullName>
                </value>
                <value>
                    <fullName>Folder</fullName>
                </value>
                <value>
                    <fullName>Canvas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>connects to KnowledgeBin object</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>MyFax</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Pages__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>OldMyFaxes</fullName>
        <columns>NAME</columns>
        <columns>Pages__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>5/1/2008 12:00 AM</value>
        </filters>
        <label>Old MyFaxes</label>
    </listViews>
    <listViews>
        <fullName>Unneededtests</fullName>
        <columns>NAME</columns>
        <columns>Created__c</columns>
        <columns>Pages__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created__c</field>
            <operation>greaterThan</operation>
            <value>11/1/2007 12:00 AM</value>
        </filters>
        <filters>
            <field>Created__c</field>
            <operation>lessThan</operation>
            <value>3/1/2008 12:00 AM</value>
        </filters>
        <label>Unneeded tests</label>
    </listViews>
    <nameField>
        <label>MyFax Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyFaxes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>